[tool.poetry]
name = "single-agent-dlp"
version = "0.1.0"
description = "Single agent MDP for loan pricing"
authors = [
    "name <email@email.com>"
]
readme = "README.md"
packages = [{include = "single_agent_dlp"}]

[tool.poetry.plugins."dotenv"]
# Settings for the dotenv plugin

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
ipykernel = ">=6.29.5,<7.0.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
black = "^25.1.0"
path = "^17.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true