[tool.poetry]
name = "single-agent-dlp"
version = "0.1.0"
description = "Single agent MDP for loan pricing"
authors = [
    "name <email@email.com>"
]
readme = "README.md"
packages = [{include = "single_agent_dlp"}]

[tool.poetry.plugins."dotenv"]
# Settings for the dotenv plugin

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
numpy = "1.20.3"
matplotlib = "3.7"
ipykernel = ">=6.29.5,<7.0.0"
pydantic = ">=1.10, <2.0"
black = "<25.1.0"
path = "^17.1.0"
kaggle = "^1.6.17"
marllib = {git = "https://github.com/Replicable-MARL/MARLlib.git"}
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true